Tạo nội dung html cho phần header trang Home

--- a/home.html
+++ b/home.html
@@ -28,6 +28,68 @@
     <link rel="stylesheet" href="./css/home.css" />
   </head>
   <body>
+    <header class="mynavbar">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">
+          <img src="./img/web-logo.png" alt="logo" />
+        </a>
+        <div class="center">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Lịch chiếu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cụm rạp</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tin tức</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Ứng dụng</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="right">
+          <a class="nav-link" href="#">
+            <img src="./img/avatar.png" alt="avatar" />
+            <span>Đăng nhập</span>
+          </a>
+
+          <label class="location">
+            <div class="location__icon">
+              <i class="fa fa-map-marker-alt"></i>
+            </div>
+            <select class="location__select">
+              <option>Hồ Chí Minh</option>
+              <option>Hà Nội</option>
+              <option>Đà Nẵng</option>
+              <option>Hải Phòng</option>
+              <option>Biên Hoà</option>
+              <option>Nha Trang</option>
+              <option>Bình Dương</option>
+              <option>Phan Thiết</option>
+              <option>Hạ Long</option>
+              <option>Cần Thơ</option>
+              <option>Vũng Tàu</option>
+            </select>
+          </label>
+        </div>
+        <button
+          class="navbar-toggler d-lg-none"
+          type="button"
+          data-toggle="collapse"
+          data-target="#collapsibleNavId"
+          aria-controls="collapsibleNavId"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        ></button>
+        <!-- <div class="collapse navbar-collapse" id="collapsibleNavId">
+          
+        </div> -->
+      </nav>
+    </header>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
