--- a/home.html
+++ b/home.html
@@ -149,6 +149,72 @@
       </nav>
     </header>
 
+    <section class="slider">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-ride="carousel"
+        data-wrap="false"
+      >
+        <ol class="carousel-indicators">
+          <li
+            data-target="#carouselExampleIndicators"
+            data-slide-to="0"
+            class="active"
+          ></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner w-100">
+          <div class="carousel-item carousel-item--1 active">
+            <a href="#"
+              ><img src="../../../img/slider-1.jpg" class="d-block w-100"
+            /></a>
+          </div>
+          <div class="carousel-item carousel-item--2">
+            <a href="#"
+              ><img src="../../../img/slider-2.png" class="d-block w-100"
+            /></a>
+          </div>
+          <div class="carousel-item carousel-item--3">
+            <a href="#"
+              ><img src="../../../img/slider-3.png" class="d-block w-100"
+            /></a>
+          </div>
+          <div class="carousel-item carousel-item--4">
+            <a href="#"
+              ><img src="../../../img/slider-4.jpg" class="d-block w-100"
+            /></a>
+          </div>
+          <div class="carousel-item carousel-item--5">
+            <a href="#"
+              ><img src="../../../img/slider-5.jpg" class="d-block w-100"
+            /></a>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
