--- a/home.html
+++ b/home.html
@@ -215,6 +215,116 @@
       </div>
     </section>
 
+    <section class="buy-ticket">
+      <div class="container d-flex">
+        <select class="select select-scroll">
+          <option>Điệp Viên Siêu Lầy - My Spy - (13)</option>
+          <option>Cá Sấu Tử Thần - Black Water: Abyss - (C18)</option>
+          <option
+            >Nội Chiến Siêu Anh Hùng - Captain America: Civil War (NC16)</option
+          >
+          <option>Kẻ Ẩn Nấp - You're Not Alone - (C16)</option>
+          <option>Mãi Bên Em - Endless - (C13)</option>
+          <option>Big Hero 6</option>
+          <option>Dinh Thự Oan Khuất - Ghost Of War - (C18)</option>
+          <option>Hồn Ma Văn Sĩ - Ghost Writer - (C18)</option>
+          <option>Kẻ Cuồng Sát - Unhinged - (C18)</option>
+          <option>Cậu Bé Người Gỗ Pinocchio - Pinocchio - (P)</option>
+          <option>Chuyến Du Lịch Chết Chóc - Outback - (C16)</option>
+          <option>Bán Đảo - Peninsula - (C18)</option>
+          <option>Tàn Tích Quỷ Ám - Relic - (C18)</option>
+          <option>Yêu Nhau Mùa Ế - Low Season - (C16)</option>
+          <option>Cuộc Phiêu Lưu Của Scooby-doo! - Scoob! - (P)</option>
+          <option>Ngôi Đền Kì Quái - Pee Nak 2 - (C16)</option>
+        </select>
+
+        <select class="select select-scroll">
+          <option>CGV Aeon Bình Tân</option>
+          <option>CGV Aeon Tân Phú</option>
+          <option>NCGV Crescent Mall</option>
+          <option>CGV Giga Mall Thủ Đức</option>
+          <option>CGV Hoàng Văn Thụ</option>
+          <option>CGV Hùng Vương Plaza</option>
+          <option>CGV IMC Trần Quang Khải</option>
+          <option>CGV Liberty Citypoint</option>
+          <option>CGV Lý Chính Thắng</option>
+          <option>CGV Pandora City</option>
+          <option>CGV Pearl Plaza</option>
+          <option>CGV Saigonres Nguyễn Xí</option>
+          <option>CGV Satra Củ Chi</option>
+          <option>CGV Sư Vạn Hạnh</option>
+          <option>CGV Thảo Điền Pearl</option>
+          <option>CGV Trường Sơn (CGV CT Plaza)</option>
+          <option>CGV Vincom Center Landmark 81</option>
+          <option>CGV Vincom Gò Vấp</option>
+          <option>CGV Vincom Thủ Đức</option>
+          <option>CGV Vincom Đồng Khởi</option>
+          <option>CGV Vivo City</option>
+          <option>CineStar Hai Bà Trưng</option>
+          <option>CineStar Quốc Thanh</option>
+          <option>DCINE Bến Thành</option>
+          <option>DDC - Đống Đa</option>
+          <option>Galaxy - Huỳnh Tấn Phát</option>
+          <option>Galaxy - Kinh Dương Vương</option>
+          <option>Galaxy - Linh Trung</option>
+          <option>Galaxy - Nguyễn Du</option>
+          <option>Galaxy - Nguyễn Văn Quá</option>
+          <option>Galaxy - Phạm Văn Chí</option>
+          <option>Galaxy - Quang Trung</option>
+          <option>Galaxy - Tân Bình</option>
+          <option>Lotte Cinema Cantavil</option>
+          <option>Lotte Cinema Cộng Hòa</option>
+          <option>Lotte Cinema Gò Vấp</option>
+          <option>Lotte Cinema Nam Sài Gòn</option>
+          <option>Lotte Cinema Phú Thọ</option>
+          <option>Lotte Cinema Thủ Đức</option>
+          <option>Mega GS Cao Thắng</option>
+        </select>
+
+        <select class="select select-scroll">
+          <option>
+            <p>Hôm nay</p>
+            <p>2020-08-18</p>
+          </option>
+          <option>
+            <p>Ngày mai</p>
+            <p>2020-08-19</p>
+          </option>
+          <option>
+            <p>Thứ năm</p>
+            <p>2020-08-20</p>
+          </option>
+          <option>
+            <p>Thứ sáu</p>
+            <p>2020-08-21</p>
+          </option>
+          <option>
+            <p>Thứ bảy</p>
+            <p>2020-08-22</p>
+          </option>
+          <option>
+            <p>Chủ nhật</p>
+            <p>2020-08-23</p>
+          </option>
+          <option>
+            <p>Thứ hai</p>
+            <p>2020-08-24</p>
+          </option>
+        </select>
+
+        <select class="select select-scroll">
+          <option>14:00</option>
+          <option>14:40</option>
+          <option>16:00</option>
+          <option>16:45</option>
+          <option>18:00</option>
+          <option>18:30</option>
+        </select>
+      </div>
+
+      <button class="btn">MUA VÉ NGAY</button>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
