Tạo chức smooth link tới filmblock từ header (Home)

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
         <div class="center">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Lịch Chiếu</a>
+              <a class="nav-link" href="#film-block-id">Lịch Chiếu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Cụm rạp</a>
@@ -318,7 +318,7 @@
       </div>
     </section>
 
-    <section class="film-block">
+    <section class="film-block" id="film-block-id">
       <div class="mycontainer">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs">
