Hoàn thành html và style cho phần showingfilme (Home)

--- a/home.html
+++ b/home.html
@@ -227,25 +227,25 @@
           <option selected>Phim</option>
           <option value="1">Điệp Viên Siêu Lầy - My Spy - (13)</option>
           <option value="2">Cá Sấu Tử Thần - Black Water: Abyss - (C18)</option>
-          <option value="3"
-            >Nội Chiến Siêu Anh Hùng - Captain America: Civil War (NC16)</option
-          >
+          <option value="3"></option>
+            Nội Chiến Siêu Anh Hùng - Captain America: Civil War (NC16)
+          </option>
           <option value="4">Kẻ Ẩn Nấp - You're Not Alone - (C16)</option>
           <option value="5">Mãi Bên Em - Endless - (C13)</option>
           <option value="6">Big Hero 6</option>
           <option value="7">Dinh Thự Oan Khuất - Ghost Of War - (C18)</option>
           <option value="8">Hồn Ma Văn Sĩ - Ghost Writer - (C18)</option>
           <option value="9">Kẻ Cuồng Sát - Unhinged - (C18)</option>
-          <option value="10"
-            >Cậu Bé Người Gỗ Pinocchio - Pinocchio - (P)</option
-          >
+          <option value="10">
+            Cậu Bé Người Gỗ Pinocchio - Pinocchio - (P)
+          </option>
           <option value="11">Chuyến Du Lịch Chết Chóc - Outback - (C16)</option>
           <option value="12">Bán Đảo - Peninsula - (C18)</option>
           <option value="13">Tàn Tích Quỷ Ám - Relic - (C18)</option>
           <option value="14">Yêu Nhau Mùa Ế - Low Season - (C16)</option>
-          <option value="15"
-            >Cuộc Phiêu Lưu Của Scooby-doo! - Scoob! - (P)</option
-          >
+          <option value="15">
+            Cuộc Phiêu Lưu Của Scooby-doo! - Scoob! - (P)
+          </option>
           <option value="16">Ngôi Đền Kì Quái - Pee Nak 2 - (C16)</option>
         </select>
 
@@ -1101,6 +1101,286 @@
                   <button class="btn ticket-buy">MUA VÉ</button>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="showing-film" id="showing-film-id">
+      <div class="mycontainer">
+        <div class="grey-margin"></div>
+        <div class="showing-detail d-flex justify-content-between">
+          <ul class="type-list">
+            <li class="type-item active">
+              <a href="#showing-film-id">
+                <img src="./img/BHD.png" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/CGV.png" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/Galaxy.png" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/Star.png" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/DDC.png" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/Mega.png" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/Dcine.jpg" />
+              </a>
+            </li>
+            <li class="type-item">
+              <a href="#showing-film-id">
+                <img src="./img/Lotte.png" />
+              </a>
+            </li>
+          </ul>
+          <div class="cinemas">
+            <div class="cinema-info active d-flex">
+              <img src="./img/bhd-star-bitexco.jpg" />
+              <div class="cinema-detail">
+                <span class="cinema-name">
+                  <span class="cinema-type">BHD Star</span>- Bitexco</span>
+                <span class="address"
+                  >L3-Bitexco Icon 68, 2 Hải Triều, Q.1</span
+                >
+                <a class="red-detail" href="#showing-film-id">[chi tiết]</a>
+              </div>
+            </div>
+            <div class="cinema-info d-flex">
+              <img src="./img/bhd-star-bitexco.jpg" />
+              <div class="cinema-detail">
+                <span class="cinema-name">
+                  <span class="cinema-type">BHD Star</span>- Bitexco</span>
+                <span class="address"
+                  >L3-Bitexco Icon 68, 2 Hải Triều, Q.1</span
+                >
+                <a class="red-detail" href="#showing-film-id">[chi tiết]</a>
+              </div>
+            </div>
+            <div class="cinema-info d-flex">
+              <img src="./img/bhd-star-bitexco.jpg" />
+              <div class="cinema-detail">
+                <span class="cinema-name">
+                  <span class="cinema-type">BHD Star</span>- Bitexco</span>
+                <span class="address"
+                  >L3-Bitexco Icon 68, 2 Hải Triều, Q.1</span
+                >
+                <a class="red-detail" href="#showing-film-id">[chi tiết]</a>
+              </div>
+            </div>
+            <div class="cinema-info d-flex">
+              <img src="./img/bhd-star-bitexco.jpg" />
+              <div class="cinema-detail">
+                <span class="cinema-name">
+                  <span class="cinema-type">BHD Star</span>- Bitexco</span>
+                <span class="address"
+                  >L3-Bitexco Icon 68, 2 Hải Triều, Q.1</span
+                >
+                <a class="red-detail" href="#showing-film-id">[chi tiết]</a>
+              </div>
+            </div>
+            <div class="cinema-info d-flex">
+              <img src="./img/bhd-star-bitexco.jpg" />
+              <div class="cinema-detail">
+                <span class="cinema-name">
+                  <span class="cinema-type">BHD Star</span>- Bitexco</span>
+                <span class="address"
+                  >L3-Bitexco Icon 68, 2 Hải Triều, Q.1</span
+                >
+                <a class="red-detail" href="#showing-film-id">[chi tiết]</a>
+              </div>
+            </div>
+            <div class="cinema-info d-flex">
+              <img src="./img/bhd-star-bitexco.jpg" />
+              <div class="cinema-detail">
+                <span class="cinema-name">
+                  <span class="cinema-type">BHD Star</span>- Bitexco</span>
+                <span class="address"
+                  >L3-Bitexco Icon 68, 2 Hải Triều, Q.1</span
+                >
+                <a class="red-detail" href="#showing-film-id">[chi tiết]</a>
+              </div>
+            </div>
+          </div>
+          <div class="films">
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
+            </div>
+            <div class="film">
+              <div class="film-info d-flex">
+                <img src="./img/ban-dao-peninsula.png" />
+                <div class="film-detail d-flex flex-column justify-content-center">
+                  <span class="film-name">
+                    <span class="film-label">C18</span>
+                    Bán Đảo - Peninsula - 
+                  </span>
+                  <span class="film-discription"
+                    >116 phút - TIX 8.3 - IMDb 0</span
+                  >
+                </div>
+              </div>
+
+              <span class="film-version">2D Digital</span>
+              <a href="#showing-film-id" class="film-duration">
+                <span class="start-time">18:25</span>
+                ~ 20:21
+              </a>
             </div>
           </div>
         </div>
