Hoàn thành phần showingfilm (Home)

--- a/home.html
+++ b/home.html
@@ -1110,7 +1110,7 @@
     <section class="showing-film" id="showing-film-id">
       <div class="mycontainer">
         <div class="grey-margin"></div>
-        <div class="showing-detail d-flex justify-content-between">
+        <div class="showing-detail">
           <ul class="type-list">
             <li class="type-item active">
               <a href="#showing-film-id">
