Hoàn thành html cho phần news (Home)

--- a/home.html
+++ b/home.html
@@ -1386,6 +1386,115 @@
         </div>
       </div>
     </section>
+    <section class="news">
+      <div class="mycontainer">
+        <div class="grey-margin"></div>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" data-toggle="tab" href="#24h"
+              >Điện Ảnh 24h</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#review"
+              >Review</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#discount"
+              >Khuyến mãi</a
+            >
+          </li>
+        </ul>
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div class="tab-pane container active" id="24h">
+            <div class="new-news">
+              <div class="big-news-item">
+                <img src="./img/news.png">
+                <h6 class="big-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                <p>Làng phim đương đại những năm qua chứng kiến sự lên ngôi của cái tên Christopher Nolan, được biết tới như một trong những đạo diễn thiên tài với khả năng tạo ra siêu phẩm bạc tỉ chất lượng. </p>
+                <div class="like">
+                  <img src="./img/like.png">
+                  <span>1</span>
+                </div>
+                <div class="comment">
+                  <img src="./img/comment.png">
+                  <span>0</span>
+                </div>
+              </div>
+              
+              <div class="big-news-item">
+                <img src="./img/news.png">
+                <h6 class="big-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                <p>Làng phim đương đại những năm qua chứng kiến sự lên ngôi của cái tên Christopher Nolan, được biết tới như một trong những đạo diễn thiên tài với khả năng tạo ra siêu phẩm bạc tỉ chất lượng. </p>
+                <div class="like">
+                  <img src="./img/like.png">
+                  <span>1</span>
+                </div>
+                <div class="comment">
+                  <img src="./img/comment.png">
+                  <span>0</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="old-news">
+              <div class="big-news-item">
+                <img src="./img/news.png">
+                <h6 class="big-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                <p>Làng phim đương đại những năm qua chứng kiến sự lên ngôi của cái tên Christopher Nolan, được biết tới như một trong những đạo diễn thiên tài với khả năng tạo ra siêu phẩm bạc tỉ chất lượng. </p>
+                <div class="like">
+                  <img src="./img/like.png">
+                  <span>1</span>
+                </div>
+                <div class="comment">
+                  <img src="./img/comment.png">
+                  <span>0</span>
+                </div>
+              </div>
+              
+              <div class="big-news-item">
+                <img src="./img/news.png">
+                <h6 class="big-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                <p>Làng phim đương đại những năm qua chứng kiến sự lên ngôi của cái tên Christopher Nolan, được biết tới như một trong những đạo diễn thiên tài với khả năng tạo ra siêu phẩm bạc tỉ chất lượng. </p>
+                <div class="like">
+                  <img src="./img/like.png">
+                  <span>1</span>
+                </div>
+                <div class="comment">
+                  <img src="./img/comment.png">
+                  <span>0</span>
+                </div>
+              </div>
+
+              <div class="small-news">
+                <div class="small-news-item">
+                  <img src="./img/news.png">
+                  <h6 class="small-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                </div>
+                <div class="small-news-item">
+                  <img src="./img/news.png">
+                  <h6 class="small-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                </div>
+                <div class="small-news-item">
+                  <img src="./img/news.png">
+                  <h6 class="small-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                </div>
+                <div class="small-news-item">
+                  <img src="./img/news.png">
+                  <h6 class="small-new-title">Dàn mỹ nhân trong thế giới điện ảnh của quái kiệt Christopher Nolan</h6>
+                </div>
+              </div>
+            </div>
+
+            <button class="btn see-more">XEM THÊM</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
