Hoàn thành html và style cho phần app (Home)

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
               <a class="nav-link" href="#news-id">Tin tức</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Ứng dụng</a>
+              <a class="nav-link" href="#app-id">Ứng dụng</a>
             </li>
           </ul>
         </div>
@@ -1386,6 +1386,7 @@
         </div>
       </div>
     </section>
+
     <section class="news" id="news-id">
       <div class="mycontainer">
         <div class="grey-margin"></div>
@@ -1774,6 +1775,27 @@
       </div>
     </section>
 
+    <section class="app" id="app-id">
+      <div class="mycontainer row">
+        <div class="app-info col-6">
+          <h3>Ứng dụng tiện lợi dành cho người yêu điện ảnh</h3>
+          <h6>Không chỉ đặt vé, bạn còn có thể bình luận phim, chấm điểm rạp và đổi quà hấp dẫn.</h6>
+          <button class="btn app-download">App miễn phí - Tải về ngay!</button>
+          <p>TIX có hai phiên bản
+            <a href="#app-id">iOS</a>
+            &
+            <a href="#app-id">Android</a>
+          </p>
+        </div>
+        <div class="app-display col-6">
+          <div class="mobile">
+            <img class="mobile-border" src="./img/mobile.png">
+            <img class="mobile-slide" src="./img/app-slide.jpg">
+          </div>
+          
+        </div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
